fix vertical alignement of the remove icon

--- a/packages/components/src/FilterBar/FilterBar.scss
+++ b/packages/components/src/FilterBar/FilterBar.scss
@@ -60,6 +60,7 @@ $tc-filter-bar-width: 250px !default;
 			height: $svg-xs-size;
 			width: $svg-xs-size;
 			margin-right: $padding-small;
+			vertical-align: baseline;
 		}
 	}
 
